# clickfs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TEST_REPORT.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  demo.cast  index.html  install.sh  observability.md  path-mapping.md  query-construction.md  streaming-read.md  style.css  traits.md
scripts/: demo-inner.sh
src/: cache.rs  driver.rs  error.rs  fs.rs  inode.rs  main.rs  readme.rs  resolver.rs  stream.rs
tests/: Dockerfile.e2e  README.md  e2e-docker.sh  e2e.sh
