[package]
name = "clickfs"
version = "0.3.0"
edition = "2021"
description = "Mount ClickHouse as a read-only POSIX filesystem"
license = "MIT OR Apache-2.0"
authors = ["donge <donge@donge.org>"]
repository = "https://github.com/donge/clickfs"
homepage = "https://donge.github.io/clickfs"
documentation = "https://donge.github.io/clickfs"
readme = "README.md"
keywords = ["clickhouse", "fuse", "filesystem", "cli", "database"]
categories = ["command-line-utilities", "filesystem", "database"]
exclude = ["docs/*", "tests/*", "TEST_REPORT.md", ".github/*"]

# cargo-binstall: pull prebuilt binaries from GitHub Releases instead of
# compiling from source. Names match the release.yml asset naming.
[package.metadata.binstall]
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-linux-x86_64.tar.gz"
[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-linux-x86_64.tar.gz"
[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-linux-aarch64.tar.gz"
[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-linux-aarch64.tar.gz"
[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-macos-arm64.tar.gz"

[[bin]]
name = "clickfs"
path = "src/main.rs"

[features]
default = ["fuse"]
fuse = ["dep:fuser"]

[dependencies]
fuser = { version = "0.14", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "gzip"] }
bytes = "1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
ahash = "0.8"
dashmap = "6"
libc = "0.2"
url = "2"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"

# On macOS, fuser must link against macFUSE's libfuse; the pure-Rust ABI path
# is Linux-only. Enable the default features (libfuse + libfuse3) here so
# `cargo build` works once macFUSE is installed (`brew install --cask macfuse`).
[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.14", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
